--- a/test/vs2017/etl.vcxproj.filters
+++ b/test/vs2017/etl.vcxproj.filters
@@ -786,6 +786,9 @@
     <ClInclude Include="..\..\include\etl\stl\choose_namespace.h">
       <Filter>ETL\STL</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\etl\profiles\determine_compiler_version.h">
+      <Filter>ETL\Profiles</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
