Initial compiler additions

--- a/test/vs2017/etl.vcxproj.filters
+++ b/test/vs2017/etl.vcxproj.filters
@@ -789,6 +789,9 @@
     <ClInclude Include="..\..\include\etl\profiles\determine_compiler_version.h">
       <Filter>ETL\Profiles</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\etl\profiles\determine_compiler.h">
+      <Filter>ETL\Profiles</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
