Renamed ETL_CONSTEXPR to ETL_CONSTEXPR_11 Added empty 'determine_compiler_language_support.h'

--- a/test/vs2017/etl.vcxproj.filters
+++ b/test/vs2017/etl.vcxproj.filters
@@ -792,6 +792,15 @@
     <ClInclude Include="..\..\include\etl\profiles\determine_compiler.h">
       <Filter>ETL\Profiles</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\etl\profiles\auto.h">
+      <Filter>ETL\Profiles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\etl\profiles\auto_no_stl.h">
+      <Filter>ETL\Profiles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\etl\profiles\determine_compiler_language_support.h">
+      <Filter>ETL\Profiles</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
